--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,20 +1,38 @@
 html,
 body {
-  padding: 0;
-  margin: 0;
-  font-family: 'Poppins', sans-serif;
+    padding: 0;
+    margin: 0;
+    font-family: 'Poppins', sans-serif;
 }
 
 a {
-  color: inherit;
-  text-decoration: none;
+    color: inherit;
+    text-decoration: none;
 }
 
 *,
 *::before,
 *::after,
 *:focus,
-*:hover{
-  box-sizing: border-box;
-  outline: none !important;
+*:hover {
+    box-sizing: border-box;
+    outline: none !important;
+}
+
+.alert-success.alert-solid {
+    color: #fff;
+    background-color: #00ac69;
+    border-color: #00ac69;
+}
+
+.alert-danger.alert-solid {
+    color: #fff;
+    background-color: #e81500;
+    border-color: #e81500;
+}
+
+.alert-info.alert-solid {
+    color: #fff;
+    background-color: #00cfd5;
+    border-color: #00cfd5;
 }
